# bazel-discovry

./: BUILD.bazel  WORKSPACE.bazel  deps.bzl  go.work  go.work.sum
apps/app1/: BUILD.bazel  main.go
apps/app2/: BUILD.bazel  main.go
